--- a/stock/en-tete_v4.tex
+++ b/stock/en-tete_v4.tex
@@ -357,7 +357,7 @@
 
 
 \lstdefinelanguage{LNat}{
-    morekeywords={tant,que,pour,tout,si,sinon,initialiser},
+    morekeywords={tant,que,pour,tout,si,sinon,initialiser,renvoyer},
     sensitive=false,
     morecomment=[l]{//},
 }
