--- a/physique spé/potentiel electrique condensateur/cours.tex
+++ b/physique spé/potentiel electrique condensateur/cours.tex
@@ -37,6 +37,22 @@
     Les lignes de champ électrostatique sont orthogonales aux équipotentielles. 
 \end{proposition}
 
+\begin{definition}{4.8}{modèle du condensateur plan infini}
+    Le condensateur plan infini est un archétype théorique de condensateur vérifiant~:
+    \begin{enumeratebf}
+        \item armatures planes de surfaces $S$ égales
+        \item le condensateur est infini : la distance $e$ les séparant est négligeable devant $\sqrt{S}$~: $e \ll \sqrt{S}$.
+        \item les armatures sont supposées en influence totale : toute ligne de champ issue d’une armature aboutit à l’autre armature, les deux armatures portent des charges exactement opposées.
+        \item l'isolant est assimilé au vide
+        \item on adopte une description surfacique de la répartition de charge sur les armatures : $\sigma = \frac{Q}{S}$
+    \end{enumeratebf}
+\end{definition}
+
+\begin{definition}{4.9}{capacité d'un condensateur}
+    On appelle \notion{capacité d'un condensateur} stockant l'énergie $\mc{E}$ la grandeur $C$ vérifiant~:
+    $$\mc{E} = \frac{1}{2}CU^2$$
+\end{definition}
+
 
 
 
