--- a/maths spé/C08/cours.tex
+++ b/maths spé/C08/cours.tex
@@ -19,4 +19,29 @@
     L’ensemble $\R$ n’est pas dénombrable.
 \end{theoreme}
 
+\begin{definition}{8.14}{famille sommable de réels positifs}
+    On dit qu’une \notion{famille $(u_i)_{i \in I}$ de nombres réels positifs est sommable} lorsqu’il existe $M\geq 0$ tel que, pour toute partie finie $J \subset I$ , on ait $\sum_{j \in J}u_j \leq M$.
+    On définit alors \notion{la somme de la famille} par~:
+    $$\sum_{i \in I}u_i = \sup_{\substack{J \subset I \\ J\text{ finie}}} \sum_{j \in J} u_j$$
+\end{definition}
+
+\begin{proposition}{8.15}{sommabilité d'une famille de réels positifs}
+    Une famille $(u_i)_{i \in \N}$ de réels positifs indexée par $\N$ est sommable si et seulement si la série $\sum_n u_n$ est convergente.
+\end{proposition}
+
+\begin{theoreme}{8.17}{de Fubini positif}
+    Soit $(u_i)_{i\in I}$ une famille de nombres réels positifs et $\displaystyle I = \bigsqcup_{n\in \N} I_n$ une partition dénombrable de $I$. La famille $(u_i)_{i\in I}$ est sommable si et seulement si~:
+    $$\begin{cases*}
+        \forall n \in \N,\, (u_i)_{i \in I_n}& est sommable \\
+        \sum_n\bigg( \sum_{i\in I_n} u_i \bigg) & est convergente
+    \end{cases*}$$
+
+    Le cas échéant,
+    $$\sum_{n=0}^{+ \infty}\bigg( \sum_{i\in I_n} u_i \bigg) = \sum_{i\in I}u_i$$
+\end{theoreme}
+
+\begin{definition}{8.20}{famille sommable de réels ou de complexes}
+    Une \notion{famille $(u_i)_{i \in I}$ est sommable} si la famille $(\abs{u_i})_{i \in I}$ l'est.
+\end{definition}
+
 \input{../../stock/pied.tex}
