--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -46,6 +46,7 @@
 \newcommand{\distance}[2]{\mathrm{d}(#1,\,#2)}
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
+\newcommand{\attracteur}[2]{\mc{A}_{#2}^{#1}}
 \newcommand{\derive}[3]{\frac{\text{d}^{#1}#2}{\text{d}#3^{#1}}}
 \newcommand{\derivepar}[3]{\frac{\partial^{#1}#2}{\partial#3^{#1}}}
 \newcommand{\fonction}[5]{%
