--- a/physique spé/notion de dipôle électrostatique/cours.tex
+++ b/physique spé/notion de dipôle électrostatique/cours.tex
@@ -3,7 +3,7 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
-\begin{definition}{5.1}{diôle électrostatique}
+\begin{definition}{5.1}{dipôle électrostatique}
     Un dipôle électrostatique est constitué de \notion{deux charges ponctuelles $P$ et $N$ opposées, séparées par une distance $a$ très faible devant les distances $r$ d'étude spatiale}. On parle d'\notion{approximation dipolaire}.
     \begin{center}
         \includegraphics[height=15em]{dipole.jpg}
