--- a/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
+++ b/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
@@ -32,7 +32,7 @@
 
 \begin{theoreme}{7.5}{de Stokes}
     Soit $\mc{S}$ une surface ouverte dont on note $\mc{C}$ un contour orienté fermé. Pour toute fonction vectorielle $\vec{A}$~:
-    $$\iint_\mc{S} (\rot \vec{A})\cdot \d{S} = \oint_\mc{C} \vec{A}\cdot \d{\vec{OM}} $$
+    $$\iint_\mc{S} (\rot \vec{A})\cdot \d{\vec{S}} = \oint_\mc{C} \vec{A}\cdot \d{\vec{OM}} $$
 \end{theoreme}
 
 \begin{definition}{7.6}{contour d'Ampère}
