--- a/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
+++ b/physique spé/Champ magnétostatique et théorème d'Ampère/cours.tex
@@ -50,5 +50,10 @@
     $$\oint_{\mc{C}_A} \vec{B} \cdot \d{\vec{OM}} = \mu_0I_\mr{enl}$$
 \end{theoreme}
 
+\begin{definition}{7.8}{solénoïde}
+    On appelle solénoïde un \notion{enroulement cylindrique de fil conducteur}, dont les spires sont supposées jointives et infiniment fines. \\
+    Un solénoïde est caractérisé par une densité linéique de spires $n$ tel que le nombre $N$ de spires sur une longueur $\ell$ est~:
+    $$N = n \ell$$
+\end{definition}
 
 \input{../../stock/pied.tex}
