--- a/Informatique spé/Algos/code.tex
+++ b/Informatique spé/Algos/code.tex
@@ -346,5 +346,13 @@
     \end{lstOCaml}
 \end{implementation}
 
+\begin{implementation}{création du tableau \code{[1,2,3]} en C}
+    \begin{lstC}
+    int main(){
+        int a[3] = {1,2,3};
+        return 0;
+    }
+    \end{lstC}
+\end{implementation}
 
 \input{../../stock/pied.tex}
